--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Tickertape exporter",
-  "description": "Export tickertape data to csv",
+  "description": "Export tickertape screener table to a csv file",
   "version": "1.0",
   "icons": {
     "16": "/src/images/logo_16.png",
